DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Action_Notification_Due__c.field-meta.xml
<CustomField>
    <fullName>amc__Action_Notification_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the Action Trigger to send Action Notification emails</description>
    <label>Action Notification Due</label>
    <type>Checkbox</type>
</CustomField>