DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Active__c.field-meta.xml
<CustomField>
    <fullName>amc__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, Roles aren&apos;t visible in the Scheduler, Create Action or Log Time forms</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>