DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Console_Default_Tab__c.field-meta.xml
<CustomField>
    <fullName>amc__Console_Default_Tab__c</fullName>
    <inlineHelpText>Identifies which &apos;Pad&apos; is loaded by default when the Role visits the Mission Control Console</inlineHelpText>
    <label>Console Default Tab</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Launch Pad</fullName>
                <default>true</default>
                <label>Launch Pad</label>
            </value>
            <value>
                <fullName>Progress Pad</fullName>
            </value>
            <value>
                <fullName>Management Pad</fullName>
            </value>
            <value>
                <fullName>Control Pad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>