DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Contact__c.field-meta.xml
<CustomField>
    <fullName>amc__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>