DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Daily_Digest_Saturday__c.field-meta.xml
<CustomField>
    <fullName>amc__Daily_Digest_Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if the Role wishes to receive the Daily Digest on a Saturday</inlineHelpText>
    <label>Daily Digest - Saturday</label>
    <type>Checkbox</type>
</CustomField>