DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Daily_Digest_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>amc__Daily_Digest_Wednesday__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Identifies if the Role wishes to receive the Daily Digest on a Wednesday</inlineHelpText>
    <label>Daily Digest - Wednesday</label>
    <type>Checkbox</type>
</CustomField>