DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Days_per_Week__c.field-meta.xml
<CustomField>
    <fullName>amc__Days_per_Week__c</fullName>
    <formula>IF(amc__Monday__c &gt; 0, 1, 0) + IF(amc__Tuesday__c &gt; 0, 1, 0) + IF(amc__Wednesday__c &gt; 0, 1, 0) + IF(amc__Thursday__c &gt; 0, 1, 0) + IF(amc__Friday__c &gt; 0, 1, 0) + IF(amc__Saturday__c &gt; 0, 1, 0) + IF(amc__Sunday__c &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula: Identifies how many days contain a value greater than 0 to calculate the number of days per week the Role works</inlineHelpText>
    <label>Days per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>