DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Email__c.field-meta.xml
<CustomField>
    <fullName>amc__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>