DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Exclude_from_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>amc__Exclude_from_Timesheet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies this Role should be excluded from the Lookup fields on the Timesheet &amp; Log Time Modal</inlineHelpText>
    <label>Exclude from Timesheet</label>
    <type>Checkbox</type>
</CustomField>