DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Expense_Approver__c.field-meta.xml
<CustomField>
    <fullName>amc__Expense_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Role responsible for approving Expenses incurred by this Role</inlineHelpText>
    <label>Expense Approver</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Roles (Expense Approver)</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>