DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__First_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__First_Name__c</fullName>
    <formula>if( amc__Contact__c = &quot;&quot;,  amc__User__r.FirstName ,  amc__Contact__r.FirstName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>