DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Function__c.field-meta.xml
<CustomField>
    <fullName>amc__Function__c</fullName>
    <inlineHelpText>Identifies the Function of this Role, which is used for Rate Card Financials.</inlineHelpText>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amc__Function</valueSetName>
    </valueSet>
</CustomField>