DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Gantt_Action_Default_Tab__c.field-meta.xml
<CustomField>
    <fullName>amc__Gantt_Action_Default_Tab__c</fullName>
    <inlineHelpText>Identifies which Tab on the Gantt Action Modal is displayed by default</inlineHelpText>
    <label>Gantt Action Default Tab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
                <default>true</default>
                <label>Action</label>
            </value>
            <value>
                <fullName>Record Detail</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Log Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>