DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Hours_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>amc__Hours_Per_Week__c</fullName>
    <description>How many hours a week this Role is available.</description>
    <label>Hours Per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>