DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>amc__Last_Name__c</fullName>
    <formula>if( amc__Contact__c = &quot;&quot;,  amc__User__r.LastName ,  amc__Contact__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>