DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Manage_Timesheets__c.field-meta.xml
<CustomField>
    <fullName>amc__Manage_Timesheets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the associated user is able to view other Roles&apos; timesheets.</description>
    <label>Manage Timesheets</label>
    <type>Checkbox</type>
</CustomField>