DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Mileage_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Mileage_Rate__c</fullName>
    <inlineHelpText>Identifies the amount paid per Kilometre / Mile</inlineHelpText>
    <label>Mileage Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>