DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Milestone_Notification_Due__c.field-meta.xml
<CustomField>
    <fullName>amc__Milestone_Notification_Due__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by the Milestone Trigger to send Milestone Notification emails</description>
    <label>Milestone Notification Due</label>
    <type>Checkbox</type>
</CustomField>