DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Phone__c.field-meta.xml
<CustomField>
    <fullName>amc__Phone__c</fullName>
    <formula>if( amc__Contact__c = &quot;&quot;,  amc__User__r.Phone ,  amc__Contact__r.Phone )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>