DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Receive_Action_Notifications__c.field-meta.xml
<CustomField>
    <fullName>amc__Receive_Action_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables Action Owners to receive an Automatic Notification email when the Status of a parent Action is set to Complete.</inlineHelpText>
    <label>Receive Dependency Update Notifications</label>
    <type>Checkbox</type>
</CustomField>