DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Receive_Timesheet_Reminder__c.field-meta.xml
<CustomField>
    <fullName>amc__Receive_Timesheet_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to ensure this person receives the Mission Control Timesheet Submission Reminder</inlineHelpText>
    <label>Receive Timesheet Reminder</label>
    <type>Checkbox</type>
</CustomField>