DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Role_Notes_RT__c.field-meta.xml
<CustomField>
    <fullName>amc__Role_Notes_RT__c</fullName>
    <inlineHelpText>Details Notes relating to the Role</inlineHelpText>
    <label>Role Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>