DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Sunday__c.field-meta.xml
<CustomField>
    <fullName>amc__Sunday__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Identifies how many hours the Role is set to work on this day of the week. Updated automatically to match the Active Role Availability record if this feature is being utilised and activated from the Control Pad of the Console</inlineHelpText>
    <label>Sunday</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>