DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>amc__Timesheet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Identifies the Role record of the person responsible for approving Time Logs for this person</inlineHelpText>
    <label>Timesheet Approver</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Roles (Timesheet Approver)</relationshipLabel>
    <relationshipName>Roles1</relationshipName>
    <type>Lookup</type>
</CustomField>