DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__User__c.field-meta.xml
<CustomField>
    <fullName>amc__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>