DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Action_Pad_Tab__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Action_Pad_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies if the Role has the permission to view the Action Pad on the Project Overview Page</description>
    <label>View Action Pad Tab</label>
    <type>Checkbox</type>
</CustomField>