DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Detail_Tab__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Detail_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Identifies if the Role can view the Detail Tab on the Project Overview</inlineHelpText>
    <label>View Detail Tab</label>
    <type>Checkbox</type>
</CustomField>