DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Gantt_Milestone_Tab__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Gantt_Milestone_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Identifies whether the User linked to this Role has the ability to view this Tab on the Gantt Modal</inlineHelpText>
    <label>View Gantt Milestone Tab</label>
    <type>Checkbox</type>
</CustomField>