DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Issue_Log_Tab__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Issue_Log_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies if the Role has the permission to view the Issue Log on the Project Overview Page</description>
    <label>View Issue Log Tab</label>
    <type>Checkbox</type>
</CustomField>