DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Launch_Pad__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Launch_Pad__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Identifies if the Role can view the Launch Pad on the Mission Control Console</inlineHelpText>
    <label>View Launch Pad</label>
    <type>Checkbox</type>
</CustomField>