DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Retro_Tab__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Retro_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Project Overview Retrospective Tab</inlineHelpText>
    <label>View Retro Tab</label>
    <type>Checkbox</type>
</CustomField>