DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Rev_Rec_Tab__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Rev_Rec_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies whether the User linked to this Role has the ability to view the Revenue Recognition Tab</description>
    <label>View Rev Rec Tab</label>
    <type>Checkbox</type>
</CustomField>