DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Risks_Tab_Charts__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Risks_Tab_Charts__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Charts on the Project Overview Risks Tab</inlineHelpText>
    <label>View Risks Tab Charts</label>
    <type>Checkbox</type>
</CustomField>