DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Scheduler_Tab__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Scheduler_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Identifies if this Role can view the Scheduler Tab on the Project Overview</inlineHelpText>
    <label>View Scheduler Tab</label>
    <type>Checkbox</type>
</CustomField>