DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Track_Pad_Add_Action__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Track_Pad_Add_Action__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Add Action Tab</inlineHelpText>
    <label>View Track Pad Add Action</label>
    <type>Checkbox</type>
</CustomField>