DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Track_Pad_Add_Issue__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Track_Pad_Add_Issue__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Identifies if the Role has the permission to view the Add Issue Tab on the Track Pad</inlineHelpText>
    <label>View Track Pad Add Issue</label>
    <type>Checkbox</type>
</CustomField>