DigicielFull/force-app/main/default/objects/amc__Role__c/fields/amc__View_Track_Pad_Feed__c.field-meta.xml
<CustomField>
    <fullName>amc__View_Track_Pad_Feed__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Identifies whether the User linked to this Role has the ability to view the Track Pad Feed Tab</inlineHelpText>
    <label>View Track Pad Feed</label>
    <type>Checkbox</type>
</CustomField>