DigicielFull/force-app/main/default/objects/amc__Role__c/listViews/amc__Role_Permissions_Project_Overview_Page.listView-meta.xml
<ListView>
    <fullName>amc__Role_Permissions_Project_Overview_Page</fullName>
    <columns>NAME</columns>
    <columns>amc__Project_Overview_Default_Tab__c</columns>
    <columns>amc__View_Insights_Tab__c</columns>
    <columns>amc__View_Overview_Tab__c</columns>
    <columns>amc__View_Action_Pad_Tab__c</columns>
    <columns>amc__View_Time_Logs_Tab__c</columns>
    <columns>amc__View_Expenses_Tab__c</columns>
    <columns>amc__View_Risks_Tab__c</columns>
    <columns>amc__View_Issue_Log_Tab__c</columns>
    <columns>amc__View_Billing_Tab__c</columns>
    <columns>amc__View_Whiteboard_Tab__c</columns>
    <columns>amc__View_Gantt_Chart_Tab__c</columns>
    <columns>amc__View_Rev_Rec_Tab__c</columns>
    <columns>amc__View_Scheduler_Tab__c</columns>
    <filterScope>Everything</filterScope>
    <label>Role Permissions - Project Overview Page</label>
</ListView>